The mod now properly works, I now need to polish some things

--- a/src/main/resources/assets/ctms/lang/en_us.json
+++ b/src/main/resources/assets/ctms/lang/en_us.json
@@ -91,6 +91,7 @@
   "ctms.screen.config.reset.tooltip": "Reset all the options to their default values (ON)",
   "ctms.screen.config.cancel.tooltip": "Quit without saving the changed options",
   "ctms.screen.config.save&quit": "Save & Quit",
+  "ctms.screen.config.save&quit.tooltip": "This will reload the resources 2 times, because we need to edit the zip file, which we can't do if Minecraft is using the resourcepack",
   "ctms.screen.ctmPacks": "Packs with Connected Textures",
   "ctms.screen.openResourcePacksFolder": "Open Packs Folder"
 }
