Handle most file texture names

--- a/src/main/resources/assets/ctms/lang/en_us.json
+++ b/src/main/resources/assets/ctms/lang/en_us.json
@@ -12,7 +12,7 @@
   "ctms.screen.config.reset.tooltip": "Reset all the options to their default values (§aON§f)",
   "ctms.screen.config.cancel.tooltip": "Quit without saving the changed options",
   "ctms.screen.config.save&quit": "Save & Quit",
-  "ctms.screen.config.save&quit.tooltip": "This will reload the resources 2 times if the pack is a zip file, because we need to edit the zip file, which we can't do if Minecraft is using the resource pack",
+  "ctms.screen.config.save&quit.tooltip": "This will reload the resources 2 times if the pack is a zip file, because we need to edit the zip file, which we can't do if Minecraft is using it",
   "ctms.screen.reload.tooltip": "Reload the resource packs. You should use this if you added or removed resource packs from your resourcepacks folder",
   "ctms.screen.controls.tooltip": "Opens the §6Controls§r screen",
   "---------------------------------------------------TOASTS---------------------------------------------------": "",
