The main screen now has the packs icon

--- a/src/main/resources/assets/ctms/lang/en_us.json
+++ b/src/main/resources/assets/ctms/lang/en_us.json
@@ -7,6 +7,9 @@
   "ctms.screen.packDisabled.tooltip": "§cThis resource pack is not enabled. \nTo enable this resource pack, go in §3Options > Resource Packs §c and select this resource pack",
   "ctms.screen.packDisabledTitle": " (not enabled)",
   "ctms.screen.openResourcePacksFolder": "Open Packs Folder",
+  "ctms.screen.done": "Done",
+  "ctms.screen.open": "Open",
+  "ctms.screen.open.tooltip": "Opens the screen associated with the resource pack",
   "--------------------------------------------RESOURCE_PACK_SCREEN--------------------------------------------": "",
   "ctms.screen.config.reset": "Reset",
   "ctms.screen.config.reset.tooltip": "Reset all the options to their default values (§aON§f)",
