The new main screen is mostly done

--- a/src/main/resources/assets/ctms/lang/en_us.json
+++ b/src/main/resources/assets/ctms/lang/en_us.json
@@ -4,8 +4,7 @@
   "language.code": "en_us",
   "-------------------------------------------------CTMS_SCREEN------------------------------------------------": "",
   "ctms.screen.title": "Resource Packs Configurations",
-  "ctms.screen.packDisabled.tooltip": "§cThis resource pack is not enabled. \nTo enable this resource pack, go in §3Options > Resource Packs §c and select this resource pack",
-  "ctms.screen.packDisabledTitle": " (not enabled)",
+  "ctms.screen.packDisabledTitle": " §c(not enabled)",
   "ctms.screen.openResourcePacksFolder": "Open Packs Folder",
   "ctms.screen.done": "Done",
   "ctms.screen.open": "Open",
