Add the base of the ControlsScreen

--- a/src/main/resources/assets/ctms/lang/en_us.json
+++ b/src/main/resources/assets/ctms/lang/en_us.json
@@ -5,19 +5,21 @@
   "-------------------------------------------------CTMS_SCREEN------------------------------------------------": "",
   "ctms.screen.title": "Resource Packs Configurations",
   "ctms.screen.packDisabledTitle": " §c(not enabled)",
+  "ctms.screen.open.tooltip": "Opens the screen associated with the resource pack",
+  "ctms.screen.open": "Open",
+  "ctms.screen.reload.tooltip": "Reload the resource packs. You should use this if you added or removed resource packs from your resourcepacks folder",
   "ctms.screen.openResourcePacksFolder": "Open Packs Folder",
   "ctms.screen.done": "Done",
-  "ctms.screen.open": "Open",
-  "ctms.screen.open.tooltip": "Opens the screen associated with the resource pack",
-  "ctms.screen.confirmReload": "Packs were added in your resourcepacks folder, so a resources reload is needed to display the packs icon correctly",
   "--------------------------------------------RESOURCE_PACK_SCREEN--------------------------------------------": "",
   "ctms.screen.config.reset": "Reset",
   "ctms.screen.config.reset.tooltip": "Reset all the options to their default values (§aON§f)",
+  "ctms.screen.config.controls": "Controls",
+  "ctms.screen.config.controls.tooltip": "Opens the §6controls §rscreen associated with the resource pack",
   "ctms.screen.config.cancel.tooltip": "Quit without saving the changed options",
   "ctms.screen.config.save&quit": "Save & Quit",
   "ctms.screen.config.save&quit.tooltip": "This will reload the resources 2 times if the pack is a zip file, because we need to edit the zip file, which we can't do if Minecraft is using it",
-  "ctms.screen.reload.tooltip": "Reload the resource packs. You should use this if you added or removed resource packs from your resourcepacks folder",
-  "ctms.screen.controls.tooltip": "Opens the §6Controls§r screen",
+  "-----------------------------------------------CONTROLS_SCREEN----------------------------------------------": "",
+  "ctms.screen.controls.title": "'s Controls",
   "---------------------------------------------------TOASTS---------------------------------------------------": "",
   "ctms.toast.packNotEnabled": "This resource pack is not enabled"
 }
