Remove unused code + change color and add tooltip of blocks that are disabled by a Controls group

--- a/src/main/resources/assets/ctms/lang/en_us.json
+++ b/src/main/resources/assets/ctms/lang/en_us.json
@@ -12,12 +12,13 @@
   "ctms.screen.done": "Done",
   "--------------------------------------------RESOURCE_PACK_SCREEN--------------------------------------------": "",
   "ctms.screen.config.reset": "Reset",
-  "ctms.screen.config.reset.tooltip": "Reset all the options to their default values (§aON§f)",
+  "ctms.screen.config.reset.tooltip": "Reset all the options to their default values (§aON§f)\n\nThis will not reset the value of the blocks that are disabled by a Controls group",
   "ctms.screen.config.controls": "Controls",
   "ctms.screen.config.controls.tooltip": "Opens the §6controls §rscreen associated with the resource pack",
   "ctms.screen.config.cancel.tooltip": "Quit without saving the changed options",
   "ctms.screen.config.save&quit": "Save & Quit",
   "ctms.screen.config.save&quit.tooltip": "This will reload the resources 2 times if the pack is a zip file, because we need to edit the zip file, which we can't do if Minecraft is using it",
+  "ctms.screen.block.parentControlIsDisabled": "§cThis block is contained by a Controls group that is disabled.\n\nAny value change will not be kept upon saving.\n\nTo change its value, enable the group(s) that contains it",
   "-----------------------------------------------CONTROLS_SCREEN----------------------------------------------": "",
   "ctms.screen.controls.title": "'s Controls",
   "---------------------------------------------------TOASTS---------------------------------------------------": "",
