--- a/src/main/resources/assets/ctms/lang/en_us.json
+++ b/src/main/resources/assets/ctms/lang/en_us.json
@@ -20,5 +20,5 @@
   "ctms.screen.config.save&quit.tooltip": "This will reload the resources 2 times if the pack is a zip file, because we need to edit the zip file, which we can't do if Minecraft is using it",
   "ctms.screen.block.parentControlIsDisabled": "§cThis block is contained by a Controls group that is disabled.\n\nTo change its value, enable the group that contains it",
   "-----------------------------------------------CONTROLS_SCREEN----------------------------------------------": "",
-  "ctms.screen.controls.title": "'s Controls"
+  "ctms.screen.control.title": "'s Controls"
 }
