--- a/src/main/resources/assets/ctms/lang/en_us.json
+++ b/src/main/resources/assets/ctms/lang/en_us.json
@@ -14,7 +14,7 @@
   "--------------------------------------------RESOURCE_PACK_SCREEN--------------------------------------------": "",
   "ctms.screen.config.reset": "Reset",
   "ctms.screen.config.reset.tooltip": "Reset all the options to their default values (§aON§f)\n\nThis will not reset the value of the blocks that are disabled by a Controls group",
-  "ctms.screen.config.controls": "Controls",
+  "ctms.screen.config.controls": "Groups",
   "ctms.screen.config.controls.tooltip": "Opens the §6controls §rscreen associated with the resource pack",
   "ctms.screen.config.cancel.tooltip": "Quit without saving the changed options",
   "ctms.screen.config.save&quit": "Save & Quit",
@@ -22,8 +22,8 @@
   "ctms.screen.block.parentControlIsDisabled": "§cThis block is contained by a Controls group that is disabled.\n\nTo change its value, enable the group that contains it",
   "ctms.screen.config.mods": "By Mod",
   "ctms.screen.config.mods.tooltip": "See the different blocks but separated depending on the mod they are from",
-  "-----------------------------------------------CONTROLS_SCREEN----------------------------------------------": "",
-  "ctms.screen.control.title": "'s Controls",
+  "------------------------------------------------GROUPS_SCREEN-----------------------------------------------": "",
+  "ctms.screen.group.title": "'s Groups",
   "------------------------------------------------BY_MOD_SCREEN-----------------------------------------------": "",
   "ctms.screen.byMod.title": ": By Mod"
 }
